Bug 1376276 - Fix limiting framerate in getusermedia with screen on Windows; r=jesup

This changes code in PlatformUIThread::Run to match what was present in
ThreadWindowsUI::Run prior to the branch 49 update. With this update in place
it is possible to limit framerate on Windows again. The limit does not work
as well as on other platforms, the actual framerate seems to be 1.5x to 2x
the request value on the systems I have tested. That was also the case prior
to the branch 49 update.

MozReview-Commit-ID: W5xnWfkaET

--HG--
extra : rebase_source : dc4422864306063e83e6e1f4a7d51a0d97cbf1c6